fix: Footnote textarea background color in dark mode

--- a/source/common/modules/markdown-editor/editor.less
+++ b/source/common/modules/markdown-editor/editor.less
@@ -344,6 +344,11 @@ body .tippy-content {
   }
 }
 
+body.dark .tippy-content .editor-fn-textarea {
+  background-color: transparent;
+  border: none;
+}
+
 // Text-folding related stuff
 .CodeMirror-gutters {
   background-color: transparent;
